small UI fixes (#302)
* open image detail view on image card image click

* fixed fab spacing in image detail view

* scrollbar on image card tags

* larger spacing on some loading spinners

--- a/hosting/src/app/pages/articles/article-details/details.component.scss
+++ b/hosting/src/app/pages/articles/article-details/details.component.scss
@@ -13,6 +13,7 @@ main {
 
 .spinnerContainer {
   display: flex;
+  margin-top: 16px;
   justify-content: center;
 }
 
