--- a/hosting/src/app/pages/events/event-details/details.component.scss
+++ b/hosting/src/app/pages/events/event-details/details.component.scss
@@ -46,6 +46,7 @@
 }
 
 .spinnerContainer {
+  margin-top: 16px;
   display: flex;
   justify-content: center;
 }
