--- a/hosting/src/app/pages/images/image-details/details.component.scss
+++ b/hosting/src/app/pages/images/image-details/details.component.scss
@@ -13,6 +13,12 @@ main {
   align-items: center;
 }
 
+.spinnerContainer {
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+}
+
 .mat-chip-list {
   width: 100%;
 }
@@ -31,8 +37,8 @@ img {
   align-items: center;
   justify-content: flex-end;
 
-  a {
-    margin: 8px;
+  a, button {
+    margin: 4px;
   }
 }
 
